<resources>
    <string name="app_name">HogwartsLibrary</string>
    <string name="title_students">Students</string>
    <string name="title_houses">Houses</string>
    <string name="title_spells">Spells</string>
    <string name="welcome_title">Welcome to the school of magic and wizardry - Hogwarts</string>
    <string name="welcome_subtitle">Put on sorting hat</string>
    <string name="welcome_name_hint">Name and Surname</string>
    <string name="welcome_select_faculty">Distribute</string>
    <string name="welcome_selected">Congratulations! Your faculty is [faculty_name]</string>
    <string name="welcome_selecting">Distributing…</string>
    <string name="welcome_next">Get in the school </string>
    <string name="students_search_hint">Enter name to search</string>
    <string name="loading">Loading...</string>
    <string name="house_detail_leader">The leader is [LEADER_NAME]</string>
    <string name="house_detail_owner">Founded by [FOUNDER_NAME]</string>
    <string name="house_detail_ghost">Main ghost is [GHOST_NAME]</string>
    <string name="spell_charm">Charm</string>
    <string name="spell_spell">Spell</string>
    <string name="spell_jinx">Jinx</string>
    <string name="spell_curse" >Curse</string>
</resources>
