<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.scenes.hat.HatActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:textColor="@color/main_header_color"
        android:textSize="@dimen/main_header_size"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textColor="@color/main_subheader_color"
        android:textSize="@dimen/main_subheader_size"
        android:text="@string/welcome_subtitle"/>
    
    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@drawable/sorting_hat"/>

    <EditText
        android:id="@+id/textWelcomeUsername"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:background="#fff"
        android:hint="@string/welcome_name_hint"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWelcomeSelect"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@drawable/main_button_background"
        android:textColor="@color/secondary_text_color"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_select_faculty"
        android:textSize="@dimen/main_button_size"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtWelcomeSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_selected"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/primary_text_size"
        tools:ignore="SpUsage" />

</LinearLayout>