<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scenes.spells.SpellsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btnSpellsCharm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selectable_button"
            android:text="@string/spell_charm"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"/>
        <Button
            android:id="@+id/btnSpellsSpell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selectable_button"
            android:text="@string/spell_spell"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"/>
        <Button
            android:id="@+id/btnSpellsJinx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selectable_button"
            android:text="@string/spell_jinx"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"/>
        <Button
            android:id="@+id/btnSpellsCurse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/selectable_button"
            android:text="@string/spell_curse"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSpells"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>